# BroAi

./: ADDING_A_PLUGIN.md  Cargo.toml  README.md  chat.html
plugins/: Cargo.toml  plugin-calculator.json  plugin-datetime.json  plugin-excel-builder.json  plugin-file-reader.json  plugin-gpio-control.json  plugin-log-tail.json  plugin-net-diagnostics.json  plugin-rag-internet.json  plugin-rag-local.json  plugin-scheduler.json  plugin-system-info.json  plugin-updater.json  plugin-weather.json  plugin-word-builder.json
plugins/plugin-calculator/: Cargo.toml
plugins/plugin-calculator/src/: main.rs
plugins/plugin-datetime/: Cargo.toml
plugins/plugin-datetime/src/: main.rs
plugins/plugin-excel-builder/: Cargo.toml
plugins/plugin-excel-builder/src/: main.rs
plugins/plugin-file-reader/: Cargo.toml
plugins/plugin-file-reader/src/: main.rs
plugins/plugin-gpio-control/: Cargo.toml
plugins/plugin-gpio-control/src/: main.rs
plugins/plugin-log-tail/: Cargo.toml
plugins/plugin-log-tail/src/: main.rs
plugins/plugin-net-diagnostics/: Cargo.toml
plugins/plugin-net-diagnostics/src/: main.rs
plugins/plugin-rag-internet/: Cargo.toml
plugins/plugin-rag-internet/src/: main.rs
plugins/plugin-rag-local/: Cargo.toml
plugins/plugin-rag-local/src/: main.rs
plugins/plugin-scheduler/: Cargo.toml
plugins/plugin-scheduler/src/: main.rs
plugins/plugin-system-info/: Cargo.toml
plugins/plugin-system-info/src/: main.rs
plugins/plugin-updater/: Cargo.toml
plugins/plugin-updater/src/: main.rs
plugins/plugin-weather/: Cargo.toml
plugins/plugin-weather/src/: main.rs
plugins/plugin-word-builder/: Cargo.toml
plugins/plugin-word-builder/src/: main.rs
src/: errors.rs  main.rs
src/api/: chat.rs  health.rs  mod.rs  models.rs
src/llm/: mod.rs
src/memory/: mod.rs
src/plugins/: mod.rs
src/security/: mod.rs
